[tool.poetry]
name = "beamup"
version = "0.1.0"
description = "beams files up to s3/s3-compatible services"
authors = ["Patrick Kage <patrick.r.kage@gmail.com>"]
license = "ISC"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
rich = "^13.7.1"
boto3 = "^1.34.84"
asyncclick = "^8.1.7.2"
toml = "^0.10.2"
humanize = "^4.9.0"


[tool.poetry.scripts]
beamup = "beamup:cli.cli_entrypoint"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
